ViewBinding, Koin, Logger, BaseActivity

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,9 @@ material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.1.4"
 
+koinVersion = "4.0.0"
+timberVersion = "5.0.1"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -19,6 +22,11 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+
+koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koinVersion"}
+koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koinVersion"}
+
+logger-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timberVersion"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
