--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activity = "1.9.3"
 constraintlayout = "2.1.4"
 
 koinVersion = "4.0.0"
+ktorVersion = "2.3.12"
 timberVersion = "5.0.1"
 
 [libraries]
@@ -23,10 +24,15 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
-koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koinVersion"}
-koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koinVersion"}
+koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koinVersion" }
+koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koinVersion" }
 
-logger-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timberVersion"}
+ktor-server-core = { group = "io.ktor", name = "ktor-server-core", version.ref = "ktorVersion" }
+ktor-server-netty = { group = "io.ktor", name = "ktor-server-netty", version.ref = "ktorVersion" }
+ktor-server-content-negotiation = { group = "io.ktor", name = "ktor-server-content-negotiation", version.ref = "ktorVersion" }
+ktor-serialization-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
+
+logger-timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timberVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
